# ml-clssification-template

./: CONTRIBUTING.md  Dockerfile  README.md  mkdocs.yml  notes.md  pyproject.toml
data/: inference_data.csv  sample_data.csv
docs/: index.md
mlruns/0/: meta.yaml
mlruns/0/12937c2f68fd4baeb5d119b9d86c524c/: meta.yaml
mlruns/0/12937c2f68fd4baeb5d119b9d86c524c/artifacts/sample_churn/: MLmodel
mlruns/0/12937c2f68fd4baeb5d119b9d86c524c/tags/: mlflow.log-model.history  mlflow.runName
mlruns/0/86498d19bf344be9aaf37770799b79ba/: meta.yaml
mlruns/0/86498d19bf344be9aaf37770799b79ba/artifacts/sample_churn/: MLmodel
mlruns/0/86498d19bf344be9aaf37770799b79ba/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.name
mlruns/0/940e264945854c33a8a3e1a792e025dc/: meta.yaml
mlruns/0/940e264945854c33a8a3e1a792e025dc/artifacts/models/: sample_churn.joblib
mlruns/0/940e264945854c33a8a3e1a792e025dc/artifacts/sample_churn/: MLmodel  conda.yaml
mlruns/0/940e264945854c33a8a3e1a792e025dc/tags/: mlflow.log-model.history  mlflow.runName
models/: preprocessor.joblib
src/: dummy_code.py  sample_data_generator.py
src/inference/: inference_fastapi_template.py  inferfence_template.py
src/training/: train_template.py
